--- a/Ansible/roles/Grafana/tasks/main.yml
+++ b/Ansible/roles/Grafana/tasks/main.yml
@@ -47,15 +47,15 @@
         jump: ACCEPT
         destination_port: '3000'
 
-    - name: Import Grafana Apt Key
-      apt_key:
-        url: https://packages.grafana.com/gpg.key
-        state: present
+    # - name: Import Grafana Apt Key
+    #   apt_key:
+    #     url: https://apt.grafana.com/gpg.key
+    #     state: present
 
-    - name: Add APT Repository
-      apt_repository:
-        repo: deb https://packages.grafana.com/oss/deb stable main
-        state: present
+    # - name: Add APT Repository
+    #   apt_repository:
+    #     repo: deb https://apt.grafana.com stable main stable main
+    #     state: present
 
     - name: Install Grafana on Debian Family
       apt:
