--- a/Ansible/roles/monitoring/tasks/install_prometheus.yml
+++ b/Ansible/roles/monitoring/tasks/install_prometheus.yml
@@ -42,7 +42,7 @@
     mode: preserve
     owner: prometheus
     group: prometheus
-  loop: [ 'console_libraries', 'consoles', 'prometheus.yml' ]
+  loop: [ 'prometheus', 'promtool', 'prometheus.yml' ]
 
 - name: Create File for Prometheus Systemd
   template:
@@ -55,6 +55,8 @@
   template:
     src=templates/prometheus.yml
     dest=/etc/prometheus/
+  notify:
+    - systemd reload
 
 - name: copy alert
   copy:
