--- a/Ansible/roles/monitoring/templates/prometheus.yml
+++ b/Ansible/roles/monitoring/templates/prometheus.yml
@@ -33,32 +33,10 @@ scrape_configs:
     static_configs:
      - targets: ["localhost:9100"]
 
-  - job_name: "db02_node"
-    scrape_interval: 5s
-    static_configs:
-     - targets: ["db02.zhukops.ru:9100"]
-
-  - job_name: "db01_node"
-    scrape_interval: 5s
-    static_configs:
-     - targets: ["db01.zhukops.ru:9100"]
-
-  - job_name: "runner_node"
-    scrape_interval: 5s
-    static_configs:
-     - targets: ["runner.zhukops.ru:9100"]
-
-  - job_name: "zhukops_node"
-    scrape_interval: 5s
-    static_configs:
-     - targets: ["zhukops.ru:9100"]
-
-  - job_name: "gitlab_node"
-    scrape_interval: 5s
-    static_configs:
-     - targets: ["gitlab.zhukops.ru:9100"]
-
   - job_name: "app_node"
     scrape_interval: 5s
     static_configs:
-     - targets: ["app.zhukops.ru:9100"]
+     - targets: ["192.168.0.164:9100"]
+
+
+##test reload
