--- a/Ansible/roles/monitoring/templates/prometheus.yml
+++ b/Ansible/roles/monitoring/templates/prometheus.yml
@@ -43,10 +43,10 @@ scrape_configs:
     static_configs:
      - targets: ["localhost:9100"]
 
-  - job_name: "app_node"
+  - job_name: "bitrix_node"
     scrape_interval: 5s
     static_configs:
-     - targets: ["192.168.0.164:9100"]
+     - targets: ["192.168.0.115:9100"]
 
   - job_name: 'blackbox'
     metrics_path: /probe
@@ -54,19 +54,19 @@ scrape_configs:
       module: [http_2xx]
     static_configs:
       - targets:
-        - http://192.168.0.164
+        - http://192.168.0.115
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: 192.168.0.164:9115
+        replacement: 192.168.0.115:9115
 
   - job_name: "bd"
     scrape_interval: 5s
     static_configs:
-     - targets: ["192.168.0.164:9104"]
+     - targets: ["192.168.0.115:9104"]
 
   - job_name: 'node_exporter_victoria'
     static_configs:
